[gd_scene load_steps=24 format=3 uid="uid://7lgf2nha34ew"]

[ext_resource type="Script" uid="uid://dws5tm7gw0mof" path="res://scripts/health_component.gd" id="1_4vlgr"]
[ext_resource type="Script" uid="uid://d1qc8iji7ioqc" path="res://scripts/mob.gd" id="1_7kicu"]
[ext_resource type="Texture2D" uid="uid://cftv6jb1cfvm3" path="res://mobs/hazards/spikes/spikes.png" id="2_3uqab"]
[ext_resource type="Script" uid="uid://coixxx3q8g6ad" path="res://scripts/finite_state_machine.gd" id="3_jtk75"]
[ext_resource type="Script" uid="uid://dayy24vnl0gug" path="res://scripts/idle.gd" id="4_2fsrl"]
[ext_resource type="Script" uid="uid://dcniktsrdfc32" path="res://scripts/hitbox_component.gd" id="6_7kicu"]
[ext_resource type="Script" uid="uid://dnbdbx64ap58p" path="res://mobs/hazards/spikes/stay.gd" id="6_vg1up"]
[ext_resource type="Script" uid="uid://qew3eeaj6a0v" path="res://mobs/hazards/spikes/damage.gd" id="7_7kicu"]
[ext_resource type="Script" uid="uid://bq6my177xprct" path="res://scripts/death.gd" id="8_ahpil"]
[ext_resource type="Script" uid="uid://ccifkr113poi5" path="res://scripts/hurt_component.gd" id="9_dxj8j"]
[ext_resource type="PackedScene" uid="uid://cgwgq60bg2o1i" path="res://scenes/health_bar.tscn" id="11_2s7wf"]

[sub_resource type="SpriteFrames" id="SpriteFrames_ahpil"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_3uqab")
}],
"loop": true,
"name": &"attack1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_3uqab")
}],
"loop": true,
"name": &"attack2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_3uqab")
}],
"loop": true,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_3uqab")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_3uqab")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h8vik"]
size = Vector2(32, 14)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2s7wf"]
size = Vector2(32, 14.999996)

[sub_resource type="Animation" id="Animation_4dfc4"]
resource_name = "attack1"
length = 0.5
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Hitbox_Attack1")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.23333333, 0.4),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"activate"
}, {
"args": [],
"method": &"deactivate"
}]
}

[sub_resource type="Animation" id="Animation_xvv06"]
resource_name = "attack2"
length = 0.5
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Hitbox_Attack2")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.3, 0.46666667),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"activate"
}, {
"args": [],
"method": &"deactivate"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lk7e6"]
_data = {
&"attack1": SubResource("Animation_4dfc4"),
&"attack2": SubResource("Animation_xvv06")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_5pc57"]
radius = 2.0
height = 4.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_njmr5"]
size = Vector2(32, 15)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_huphv"]
size = Vector2(15, 32)

[sub_resource type="Animation" id="Animation_mf48g"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_dvhn7"]
resource_name = "hurt"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.19999999, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.3137255), Color(1, 1, 1, 1), Color(1, 1, 1, 0.3137255), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mf48g"]
_data = {
&"RESET": SubResource("Animation_mf48g"),
&"hurt": SubResource("Animation_dvhn7")
}

[node name="Spikes" type="CharacterBody2D" groups=["enemy"]]
script = ExtResource("1_7kicu")
boss_id = "fake_narrator"

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("1_4vlgr")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(3.916666, 11.863638)
scale = Vector2(0.09232955, 0.09232956)
sprite_frames = SubResource("SpriteFrames_ahpil")
animation = &"attack2"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(4, 12)
shape = SubResource("RectangleShape2D_h8vik")

[node name="PlayerDetection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
position = Vector2(3.999998, 11.499998)
scale = Vector2(0.99999994, 0.99999994)
shape = SubResource("RectangleShape2D_2s7wf")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_lk7e6")
}

[node name="FiniteStateMachine" type="Node2D" parent="."]
script = ExtResource("3_jtk75")
initial_state = NodePath("idle")

[node name="idle" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("4_2fsrl")

[node name="follow" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("6_vg1up")

[node name="attack" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("7_7kicu")

[node name="death" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("8_ahpil")

[node name="debug" type="Label" parent="."]
visible = false
offset_left = -3.6
offset_top = -42.0
offset_right = 55.0
offset_bottom = 23.0
text = "DEBUG"

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 16
script = ExtResource("9_dxj8j")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(14, 14)
shape = SubResource("CapsuleShape2D_5pc57")

[node name="Hitbox_Attack1" type="Area2D" parent="." groups=["hitbox"]]
collision_layer = 32
collision_mask = 4
script = ExtResource("6_7kicu")

[node name="attack_up" type="CollisionShape2D" parent="Hitbox_Attack1"]
position = Vector2(4, 11.5)
shape = SubResource("RectangleShape2D_njmr5")

[node name="Hitbox_Attack2" type="Area2D" parent="." groups=["hitbox"]]
position = Vector2(19, -5)
collision_layer = 32
collision_mask = 4
script = ExtResource("6_7kicu")

[node name="attack" type="CollisionShape2D" parent="Hitbox_Attack2"]
position = Vector2(-15, 16.5)
rotation = 1.5707964
shape = SubResource("RectangleShape2D_huphv")

[node name="EffectsAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_mf48g")
}

[node name="WallRay" type="RayCast2D" parent="."]
visible = false
position = Vector2(0, 7)
target_position = Vector2(42, 0)

[node name="FloorRay" type="RayCast2D" parent="."]
visible = false

[node name="HealthBar" parent="." instance=ExtResource("11_2s7wf")]
visible = false
offset_left = -13.200001
offset_top = -16.0
offset_right = 99.8
offset_bottom = 11.0
scale = Vector2(0.24, 0.24)

[connection signal="body_entered" from="PlayerDetection" to="FiniteStateMachine/idle" method="_on_player_detection_body_entered"]
[connection signal="area_entered" from="Hurtbox" to="Hurtbox" method="_on_area_entered"]
